[package]
name = "lay_tracing"
version = "0.1.0"
authors = ["wass80 <wasss80@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
rand = "*"
tokio = { version = "1", features = ["full"] }
futures = "0.3"